--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ path = "src/bin/main.rs"
 [dependencies]
 regex = "1"
 itertools = "0.14.*"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+neli-wifi = "0.6.*"
