--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ netlink-rust = "0.1.1"
 win32-wlan = "0.1.0"
 futures = "0.3"
 libwifi = "0.4.*"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+corewlan-sys = "0.1.1"
