--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,5 @@ futures = "0.3"
 libwifi = "0.4.*"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-corewlan-sys = "0.1.1"
+objc2-core-wlan = "0.3"
+objc2-foundation = "0.3"
