--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ libwifi = "0.4.*"
 [target.'cfg(target_os = "macos")'.dependencies]
 objc2-core-wlan = "0.3"
 objc2-foundation = "0.3"
+objc2-core-location = { version = "0.3", features = [ "CLLocation" ] }
