--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ futures = "0.3"
 libwifi = "0.4.*"
 
 [target.'cfg(target_os = "macos")'.dependencies]
+objc2 = { version = "0.6", features = [ "std" ] }
 objc2-core-wlan = "0.3"
 objc2-foundation = "0.3"
 objc2-core-location = { version = "0.3", features = [ "CLLocation" ] }
